# LaLaLa

./: LICENSE  README.md  Thumbs.db  makedic.hpp  makedic.md  map.psd  project.docx  project.md  未名湖周边标注.psd
build-projectdemo-Qt_6_6_3_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-projectdemo-Qt_6_6_3_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-aa8f22e5690979084a1a.json  cmakeFiles-v1-5334810b8041908a25f5.json  codemodel-v2-c7f1a044cbc0b7d0c075.json  directory-.-Debug-b92ef96acbc8600e8718.json  (+4 more)
build-projectdemo-Qt_6_6_3_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-7ba95b6b0a24ca763dab.json  cmakeFiles-v1-35de637c783eb37a0aca.json  codemodel-v2-cf985040ef0a851190bf.json  directory-.-Debug-60d7cc71de69ada679c2.json  index-2024-05-20T07-56-18-0527.json  target-untitled1-Debug-b4bb25ffa1caf10a12f6.json  target-untitled1_autogen-Debug-5f432b6e5a9133ae3823.json  target-untitled1_autogen_timestamp_deps-Debug-110c5b8f9b20e1116afd.json
build-projectdemo-Qt_6_6_3_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-projectdemo-Qt_6_6_3_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-projectdemo-Qt_6_6_3_for_macOS-Debug/projectdemo.app/Contents/: Info.plist
build-projectdemo-Qt_6_6_3_for_macOS-Debug/projectdemo_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-projectdemo-Qt_6_6_3_for_macOS-Debug/projectdemo_autogen/EWIEGA46WW/: moc_areaa.cpp  moc_areaa.cpp.d  moc_areab.cpp  moc_areab.cpp.d  moc_areac.cpp.d  moc_aread.cpp.d  moc_customdic.cpp  moc_customdic.cpp.d  moc_mainwindow.cpp.d  moc_page1.cpp.d  moc_page2.cpp.d  moc_page3.cpp  moc_page3.cpp.d  moc_page4.cpp  moc_page4.cpp.d  moc_tip.cpp.d  moc_tip_.cpp  moc_tip_.cpp.d  moc_widget.cpp  moc_widget.cpp.d  moc_widget_.cpp  moc_widget_.cpp.d  qrc_b.cpp  qrc_material.cpp
build-projectdemo-Qt_6_6_3_for_macOS-Debug/projectdemo_autogen/include/: ui_areac.h  ui_aread.h  ui_mainwindow.h  ui_page2.h  ui_page3.h  ui_page4.h  ui_tip.h  ui_tip_.h  ui_widget.h  ui_widget_.h
build-projectdemo-Qt_6_6_3_for_macOS-Debug/untitled1.app/Contents/: Info.plist
build-projectdemo-Qt_6_6_3_for_macOS-Debug/untitled1_autogen/: deps  mocs_compilation.cpp
build-projectdemo-Qt_6_6_3_for_macOS-Debug/untitled1_autogen/EWIEGA46WW/: moc_areaa.cpp.d  moc_areab.cpp.d  moc_areac.cpp  moc_areac.cpp.d  moc_aread.cpp  moc_aread.cpp.d  moc_customdic.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_page1.cpp  moc_page1.cpp.d  moc_page2.cpp  moc_page2.cpp.d  moc_page3.cpp  moc_page3.cpp.d  moc_tip.cpp  moc_tip.cpp.d  moc_widget.cpp.d  moc_widget_.cpp.d  qrc_a.cpp  qrc_c.cpp  qrc_d.cpp
build-projectdemo-Qt_6_6_3_for_macOS-Debug/untitled1_autogen/include/: ui_areaa.h  ui_areab.h  ui_customdic.h  ui_page1.h  ui_widget_.h
func1/build-func1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  customdic.csv
func1/build-func1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
func1/build-func1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
func1/build-func1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/func1_autogen/: deps  mocs_compilation.cpp
func1/build-func1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/func1_autogen/EWIEGA46WW/: moc_customdic.cpp  moc_customdic.cpp.d  moc_widget.cpp  moc_widget.cpp.d
func1/build-func1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/func1_autogen/include/: ui_customdic.h  ui_widget.h
func1/func1/: CMakeLists.txt  customdic.cpp  customdic.h  customdic.ui  main.cpp  makedic.hpp  widget.cpp  widget.h  widget.ui
projectdemo/: CMakeLists.txt  CMakeLists.txt.user_  MapWidget.cpp  MapWidget.h  MapWidget.ui  QandA.csv  a.qrc  achievement.csv  areaa.cpp  areaa.h  areaa.ui  areab.cpp  areab.h  areab.ui  areac.cpp  areac.h  areac.ui  aread.cpp  aread.h  aread.ui  b.qrc  c.qrc  customdic.cpp  customdic.csv  customdic.ui  d.qrc  dialog1.cpp  dialog1.ui  dialog2.cpp  dialog2.h  dialog2.ui  dialog3.cpp  dialog3.ui  functionwidget.cpp  functionwidget.h  functionwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+33 more)
task 2/: 全图with图例.psd
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/.qt/: QtDeploySupport.cmake
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/.qtc_clangd/: compile_commands.json
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/task_two.app/Contents/: Info.plist
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/task_two_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/task_two_autogen/EWIEGA46WW/: moc_areaa.cpp  moc_areaa.cpp.d  moc_areab.cpp  moc_areab.cpp.d  moc_areac.cpp  moc_areac.cpp.d  moc_aread.cpp  moc_aread.cpp.d  moc_widget.cpp  moc_widget.cpp.d  qrc_a.cpp  qrc_b.cpp  qrc_c.cpp  qrc_d.cpp
task 2/build-task_two-Qt_6_6_3_for_macOS-Debug/task_two_autogen/include/: ui_areaa.h  ui_widget.h
task 2/task_two/: CMakeLists.txt  a.qrc  areaa.cpp  areaa.h  areaa.ui  areab.cpp  areab.h  areab.ui  areac.cpp  areac.h  areac.ui  aread.cpp  aread.h  aread.ui  b.qrc  c.qrc  d.qrc  map.qrc  widget.cpp  widget.h  widget.ui
(+1404 files in other folders)
